# sss

./: .gitignore  BinaryFiles  DESCRIPTION  NAMESPACE  README
R/: AllClasses.R  AllGenerics.R  ClassConstructors.R  readSummary.R  setupList.R  sss.R  sssModel.R  sssPredict.R  sssResult.R  updateSetup.R  writeCensor.R  writeData.R  writeResponse.R  writeSetup.R  writeWeights.R
data/: binary.setup.txt  linear.setup.txt  relapsedata.txt  survival.setup.txt  wdata.txt  xdata.txt  ybinarydata.txt  ylineardata.txt  ysurvtimedata.txt
inst/exec/: modelsearch  modelsearch32  modelsearch64  modelsummary64
man/: sss-methods.Rd  sssBinaryModel-class.Rd  sssBinaryResult-class.Rd  sssLinearModel-class.Rd  sssLinearResult-class.Rd  sssModel-class.Rd  sssModel-constructors.Rd  sssResult-class.Rd  sssSetup-class.Rd  sssSurvivalModel-class.Rd  sssSurvivalResult-class.Rd
src/: INCLUDE.H  Model.cpp  Model.h  NEWMATIO.H  calc.cpp  marglik.h  marglik.sln  marglik.vcproj  newrun.cpp  newrun.h  node.cpp  serial_mod_search.cpp  sss.m  summarize_binary.cpp  summarize_binary.sln  summarize_binary.vcproj
src/newmat/: EXAMPLE.DSP  EXAMPLE.DSW  EXAMPLE.PLG  EXAMPLE.ncb  MYEXCEPT.CPP  NEWMATNL.CPP
src/newmat/Debug/: util.bsc  util.pch
src/newmat/test/: NM10.HTM  README  newmat10.xml
src/sss/: Makefile  Makefile.am  Makefile.in  Model.cpp  Model.h  NEWMATIO.H  calc.cpp  config.status  configure  configure.ac  marglik.cpp  newrun.cpp  newrun.h  node.cpp  serial_mod_search.cpp  sss.m  summarize_binary.cpp
src/sss/.deps/: modelsearch-Model.Po  modelsearch-marglik.Po  modelsearch-marglik.Tpo  modelsearch-newrun.Po  modelsearch-serial_mod_search.Po
src/sss/autom4te.cache/: output.0  traces.0  traces.1
src/sss/newmat/: .PRECISIO.H.swp  EXAMPLE.DSP  EXAMPLE.DSW  EXAMPLE.PLG  EXAMPLE.opt  INCLUDE.H  MYEXCEPT.CPP  NEWMATNL.CPP
src/sss/newmat/Debug/: Data.sbr  calc.sbr  util.sbr  vc60.idb
src/sss/newmat/test/: newmat10.xml
