## By Ben Sauerwine
## Yep, it's trivial.  Just enough to get automake working.
## TO REPRODUCE ./configure:
##  autoreconf --force --install

AC_INIT([sss], [0.1], [brian.bot@sagebase.org], [sss], [http://www.sagebase.org/])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 no-define foreign])
##AC_PROG_LIBTOOL
##AC_PROG_CXXCPP
##AC_PROG_RANLIB
AC_PROG_CXX
AC_SUBST([AM_CXXFLAGS])
##AC_SUBST([AM_LDFLAGS])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
